--- a/styles/globales.css
+++ b/styles/globales.css
@@ -73,7 +73,7 @@ img {
 /* Header */
 
 .header {
-  background-image: url(/Image/pexels-pixabay-270348.jpg);
+  background-image: url(/Image/fondo.jpg);
   height: 65rem;
   background-size: cover;
   background-repeat: no-repeat;
@@ -82,5 +82,41 @@ img {
 .header__texto {
   text-align: center;
   color: var(--blanco);
-  margin-top: 5rem;
+  margin-top: 10rem;
+}
+
+@media (min-width: 768px) {
+  .header__texto {
+    margin-top: 15rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .barra {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+.logo {
+  color: var(--blanco);
+}
+.logo__nombre {
+  font-weight: 400;
+}
+.logo__bold {
+  font-weight: 700;
+}
+@media (min-width: 768px) {
+  .navegacion {
+    display: flex;
+    gap: 2rem;
+  }
+}
+
+.navegacion__enlace {
+  color: var(--blanco);
+  display: block;
+  text-align: center;
+  font-size: 1.8rem;
 }
