--- a/styles/globales.css
+++ b/styles/globales.css
@@ -4,7 +4,7 @@
   --primario: #3d5656;
   --secundario: #fed049;
   --celesteOscuro: #68b984;
-  --celesteClaro: #cffde1;
+  --celesteClaro: #faf8f1;
   --blanco: #ffffff;
   --negro: #000000;
 }
@@ -22,6 +22,7 @@ body {
   font-family: var(--fuenteParrafos);
   font-size: 1.6rem;
   line-height: 2;
+  background-color: var(--celesteClaro);
 }
 
 /* Globales */
@@ -73,7 +74,7 @@ img {
 /* Header */
 
 .header {
-  background-image: url(/Image/fondo.jpg);
+  background-image: url(/Image/pexels-pixabay-270348.jpg);
   height: 65rem;
   background-size: cover;
   background-repeat: no-repeat;
@@ -83,14 +84,22 @@ img {
   text-align: center;
   color: var(--blanco);
   margin-top: 10rem;
+  text-transform: uppercase;
 }
 
+@media (min-width: 758px) {
+  .header__texto h2 {
+    font-size: 8rem;
+  }
+}
 @media (min-width: 768px) {
   .header__texto {
     margin-top: 15rem;
   }
 }
-
+.barra {
+  padding-top: 5rem;
+}
 @media (min-width: 768px) {
   .barra {
     display: flex;
@@ -110,7 +119,7 @@ img {
 @media (min-width: 768px) {
   .navegacion {
     display: flex;
-    gap: 2rem;
+    gap: 3rem;
   }
 }
 
@@ -120,3 +129,147 @@ img {
   text-align: center;
   font-size: 1.8rem;
 }
+
+/* Footer */
+
+.footer {
+  background-color: var(--negro);
+  padding-bottom: 3rem;
+  margin-top: 4rem;
+  border-radius: 0.5rem;
+}
+/* Fin Footer */
+
+/* main con proyectos */
+@media (min-width: 768px) {
+  .proyectos {
+    margin-top: 2rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 2rem;
+    row-gap: 5rem;
+  }
+}
+
+.proyecto__imagen iframe {
+  height: 40rem;
+  width: 60rem;
+}
+/* Fin main con Proyectos */
+
+/* Boton */
+.btn {
+  display: block;
+  padding: 0.7em 1em;
+  margin-top: 2rem;
+  background: transparent;
+  outline: none;
+  border: 0;
+  color: var(--secundario);
+  letter-spacing: 0.1em;
+  font-family: monospace;
+  font-size: 17px;
+  font-weight: bold;
+  z-index: 1;
+}
+
+.cube {
+  position: relative;
+  transition: all 0.5s;
+}
+
+.cube .bg-top {
+  position: absolute;
+  height: 10px;
+  background: var(--secundario);
+  bottom: 100%;
+  left: 5px;
+  right: -5px;
+  transform: skew(-45deg, 0);
+  margin: 0;
+  transition: all 0.4s;
+}
+
+.cube .bg-top .bg-inner {
+  bottom: 0;
+}
+
+.cube .bg {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  top: 0;
+  right: 0;
+  background: var(--secundario);
+  transition: all 0.4s;
+}
+
+.cube .bg-right {
+  position: absolute;
+  background: var(--secundario);
+  top: -5px;
+  z-index: 0;
+  bottom: 5px;
+  width: 10px;
+  left: 100%;
+  transform: skew(0, -45deg);
+  transition: all 0.4s;
+}
+
+.cube .bg-right .bg-inner {
+  left: 0;
+}
+
+.cube .bg-inner {
+  background: var(--negro);
+  position: absolute;
+  left: 2px;
+  right: 2px;
+  top: 2px;
+  bottom: 2px;
+}
+
+.cube .text {
+  position: relative;
+  transition: all 0.4s;
+}
+
+.cube:hover .bg-inner {
+  background: var(--secundario);
+  transition: all 0.4s;
+}
+
+.cube:hover .text {
+  color: var(--negro);
+  transition: all 0.4s;
+}
+
+.cube:hover .bg-right,
+.cube:hover .bg,
+.cube:hover .bg-top {
+  background: var(--negro);
+}
+
+.cube:active {
+  z-index: 9999;
+  animation: bounce 0.1s linear;
+}
+
+@keyframes bounce {
+  50% {
+    transform: scale(0.9);
+  }
+}
+.btn a {
+  font-size: 2rem;
+  color: var(--blanco);
+}
+
+/* Titulo proyectos */
+
+.titulo__proyectos {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+/*  */
