--- a/styles/globales.css
+++ b/styles/globales.css
@@ -147,14 +147,37 @@ img {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 2rem;
-    row-gap: 5rem;
+    row-gap: 4rem;
   }
 }
 
 .proyecto__imagen iframe {
-  height: 40rem;
-  width: 60rem;
+  width: 40rem;
+  height: 30rem;
+  margin-top: 2rem;
 }
+@media (min-width: 576px) {
+  .proyecto__imagen iframe {
+    width: 40rem;
+  }
+}
+@media (min-width: 576px) {
+  .proyecto__imagen iframe {
+    width: 50rem;
+  }
+}
+
+@media (min-width: 768px) {
+  /* .proyectos {
+    display: flex;
+    flex-direction: column;
+  } */
+  .proyecto__imagen iframe {
+    height: 40rem;
+    max-width: auto;
+  }
+}
+
 /* Fin main con Proyectos */
 
 /* Boton */
@@ -273,3 +296,16 @@ img {
 }
 
 /*  */
+
+/* Seccion sobre mi */
+.sobremi {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 3rem;
+}
+.imagen__sobremi {
+  background-color: red;
+  max-width: 100%;
+  height: 30rem;
+}
+/* Fin Seccion sobre Mi */
