--- a/styles/globales.css
+++ b/styles/globales.css
@@ -1,7 +1,7 @@
 :root {
   --fuenteHeading: "PT Sans", sans-serif;
   --fuenteParrafos: "Open Sans", sans-serif;
-  --primario: #3d5656;
+  --primario: #00504e;
   --secundario: #fed049;
   --celesteOscuro: #68b984;
   --celesteClaro: #faf8f1;
@@ -18,299 +18,78 @@ html {
 *::after {
   box-sizing: inherit;
 }
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   font-family: var(--fuenteParrafos);
   font-size: 1.6rem;
-  line-height: 2;
-  background-color: var(--celesteClaro);
 }
-
-/* Globales */
+p {
+  font-size: 2rem;
+}
 
 .contenedor {
-  max-width: 120rem;
   width: 95%;
+  max-width: 120rem;
   margin: 0 auto;
 }
-
 a {
   text-decoration: none;
 }
-
 h1,
 h2,
-h3,
-h4 {
-  font-family: var(--fuenteHeading);
+h3 {
+  margin: 0 0 5rem 0;
 }
 h1 {
-  font-size: 4.8rem;
-}
-h2 {
   font-size: 4rem;
 }
+h2 {
+  font-size: 3.6rem;
+}
 h3 {
-  font-size: 3.2rem;
-}
-h4 {
-  font-size: 2.8rem;
-}
-img {
-  max-width: 100%;
+  font-size: 3rem;
 }
 
-/* Utilidades */
+/* Sidebar */
 
-.no-margin {
-  margin: 0;
+#sidebar {
+  position: fixed;
+  width: 20rem;
+  height: 100%;
+  background-color: var(--primario);
+  left: -20rem;
+  transition: all 500ms linear;
 }
-.no-padding {
-  padding: 0;
-}
-.centrar-texto {
-  text-align: center;
+#sidebar.active {
+  left: 0rem;
 }
 
-/* Header */
-
-.header {
-  background-image: url(/Image/pexels-pixabay-270348.jpg);
-  height: 65rem;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-}
-.header__texto {
-  text-align: center;
+#sidebar ul li {
   color: var(--blanco);
-  margin-top: 10rem;
-  text-transform: uppercase;
-}
-
-@media (min-width: 758px) {
-  .header__texto h2 {
-    font-size: 8rem;
-  }
-}
-@media (min-width: 768px) {
-  .header__texto {
-    margin-top: 15rem;
-  }
-}
-.barra {
-  padding-top: 5rem;
-}
-@media (min-width: 768px) {
-  .barra {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
+  text-align: center;
+  list-style: none;
+  border-bottom: 1px solid;
+  padding: 1.5rem 1rem;
+  cursor: pointer;
 }
 .logo {
-  color: var(--blanco);
-}
-.logo__nombre {
-  font-weight: 400;
-}
-.logo__bold {
-  font-weight: 700;
-}
-@media (min-width: 768px) {
-  .navegacion {
-    display: flex;
-    gap: 3rem;
-  }
-}
-
-.navegacion__enlace {
-  color: var(--blanco);
   display: block;
-  text-align: center;
-  font-size: 1.8rem;
+  margin: 0 auto;
 }
 
-/* Footer */
-
-.footer {
-  background-color: var(--negro);
-  padding-bottom: 3rem;
-  margin-top: 4rem;
-  border-radius: 0.5rem;
+#sidebar .toggle-btn {
+  position: absolute;
+  left: 23rem;
+  top: 2rem;
+  cursor: pointer;
 }
-/* Fin Footer */
-
-/* main con proyectos */
-@media (min-width: 768px) {
-  .proyectos {
-    margin-top: 2rem;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 2rem;
-    row-gap: 4rem;
-  }
-}
-
-.proyecto__imagen iframe {
-  width: 40rem;
-  height: 30rem;
-  margin-top: 2rem;
-}
-@media (min-width: 576px) {
-  .proyecto__imagen iframe {
-    width: 40rem;
-  }
-}
-@media (min-width: 576px) {
-  .proyecto__imagen iframe {
-    width: 50rem;
-  }
-}
-
-@media (min-width: 768px) {
-  /* .proyectos {
-    display: flex;
-    flex-direction: column;
-  } */
-  .proyecto__imagen iframe {
-    height: 40rem;
-    max-width: auto;
-  }
-}
-
-/* Fin main con Proyectos */
-
-/* Boton */
-.btn {
+#sidebar .toggle-btn span {
   display: block;
-  padding: 0.7em 1em;
-  margin-top: 2rem;
-  background: transparent;
-  outline: none;
-  border: 0;
-  color: var(--secundario);
-  letter-spacing: 0.1em;
-  font-family: monospace;
-  font-size: 17px;
-  font-weight: bold;
-  z-index: 1;
-}
-
-.cube {
-  position: relative;
-  transition: all 0.5s;
-}
-
-.cube .bg-top {
-  position: absolute;
-  height: 10px;
-  background: var(--secundario);
-  bottom: 100%;
-  left: 5px;
-  right: -5px;
-  transform: skew(-45deg, 0);
-  margin: 0;
-  transition: all 0.4s;
-}
-
-.cube .bg-top .bg-inner {
-  bottom: 0;
-}
-
-.cube .bg {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  top: 0;
-  right: 0;
-  background: var(--secundario);
-  transition: all 0.4s;
-}
-
-.cube .bg-right {
-  position: absolute;
-  background: var(--secundario);
-  top: -5px;
-  z-index: 0;
-  bottom: 5px;
-  width: 10px;
-  left: 100%;
-  transform: skew(0, -45deg);
-  transition: all 0.4s;
-}
-
-.cube .bg-right .bg-inner {
-  left: 0;
-}
-
-.cube .bg-inner {
-  background: var(--negro);
-  position: absolute;
-  left: 2px;
-  right: 2px;
-  top: 2px;
-  bottom: 2px;
-}
-
-.cube .text {
-  position: relative;
-  transition: all 0.4s;
-}
-
-.cube:hover .bg-inner {
-  background: var(--secundario);
-  transition: all 0.4s;
-}
-
-.cube:hover .text {
-  color: var(--negro);
-  transition: all 0.4s;
-}
-
-.cube:hover .bg-right,
-.cube:hover .bg,
-.cube:hover .bg-top {
-  background: var(--negro);
-}
-
-.cube:active {
-  z-index: 9999;
-  animation: bounce 0.1s linear;
-}
-
-@keyframes bounce {
-  50% {
-    transform: scale(0.9);
-  }
-}
-.btn a {
-  font-size: 2rem;
-  color: var(--blanco);
-}
-
-/* Titulo proyectos */
-
-.titulo__proyectos {
+  width: 4rem;
   text-align: center;
-  text-transform: uppercase;
+  font-size: 3rem;
+  border: 1px solid var(--negro);
 }
-
-/*  */
-
-/* Seccion sobre mi */
-@media (min-width: 768px) {
-  .sobremi {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 3rem;
-  }
-}
-
-.imagen__sobremi {
-  background-image: url(/Image/fondo.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  max-width: 100%;
-  height: 30rem;
-}
-/* Fin Seccion sobre Mi */
