--- a/styles/globales.css
+++ b/styles/globales.css
@@ -7,6 +7,7 @@
   --celesteClaro: #faf8f1;
   --blanco: #ffffff;
   --negro: #000000;
+  --fondoHeader: #434242;
 }
 
 html {
@@ -91,5 +92,25 @@ h3 {
   width: 4rem;
   text-align: center;
   font-size: 3rem;
-  border: 1px solid var(--negro);
+  border: 1px solid var(--blanco);
+  color: var(--blanco);
+}
+
+/* Header */
+
+.header {
+  background-color: var(--fondoHeader);
+  height: 50rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header__header {
+  background-image: url(/Image/Yo.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  border-radius: 40%;
+  width: 30rem;
+  height: 45rem;
 }
