--- a/styles/globales.css
+++ b/styles/globales.css
@@ -1,6 +1,6 @@
 :root {
-  --fuenteHeading: "PT Sans", sans-serif;
-  --fuenteParrafos: "Open Sans", sans-serif;
+  --fuenteHeading: "IBM Plex Serif", serif;
+  --fuenteParrafos: "Montserrat", sans-serif;
   --primario: #00504e;
   --secundario: #fed049;
   --celesteOscuro: #68b984;
@@ -38,11 +38,13 @@ p {
 }
 a {
   text-decoration: none;
+  color: var(--blanco);
 }
 h1,
 h2,
 h3 {
   margin: 0 0 5rem 0;
+  font-family: var(--fuenteHeading);
 }
 h1 {
   font-size: 4rem;
@@ -113,4 +115,55 @@ h3 {
   border-radius: 40%;
   width: 30rem;
   height: 45rem;
+}
+.header__header:hover {
+  width: 50rem;
+  height: 50rem;
+  transition: all 500ms linear;
+}
+/* Titulo y Perfil */
+
+.contenido {
+  background-color: var(--primario);
+  text-align: center;
+  margin-top: 5rem;
+  color: var(--blanco);
+  padding-top: 4rem;
+}
+.titulo {
+  display: inline;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 5rem;
+  border-bottom: 2px solid var(--blanco);
+}
+.perfil__titulo {
+  margin-top: 4rem;
+}
+/* Experiencia */
+.experiencia {
+  margin-top: 15rem;
+}
+
+@media (min-width: 768px) {
+  .experiencia {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+  }
+}
+.experiencia__uno {
+  margin-top: 4rem;
+}
+.experiencia__titulo {
+  padding: 1rem 0 1rem 0;
+  border: 1px solid var(--blanco);
+  border-radius: 1rem;
+}
+.experiencia__lista {
+  list-style: none;
+}
+.experiencia__lista li {
+  margin-bottom: 1rem;
+  font-size: 2rem;
 }
