--- a/styles/globales.css
+++ b/styles/globales.css
@@ -167,3 +167,64 @@ h3 {
   margin-bottom: 1rem;
   font-size: 2rem;
 }
+
+/* Boton */
+.btn {
+  width: 6.5em;
+  height: 2.3em;
+  margin: 0.5em;
+  background: black;
+  color: white;
+  border: none;
+  border-radius: 0.625em;
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+
+button:hover {
+  color: black;
+}
+
+button:after {
+  content: "";
+  background: white;
+  position: absolute;
+  z-index: -1;
+  left: -20%;
+  right: -20%;
+  top: 0;
+  bottom: 0;
+  transform: skewX(-45deg) scale(0, 1);
+  transition: all 0.5s;
+}
+
+button:hover:after {
+  transform: skewX(-45deg) scale(1, 1);
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+/* Proyectos */
+.proyectos__titulo {
+  margin-top: 10rem;
+}
+.proyectos__pag {
+  width: auto;
+  height: 45rem;
+}
+.proyectos__titulo__contenedor {
+  margin-bottom: 5rem;
+}
+.proyectos__titulo:hover {
+  font-size: 5rem;
+}
+@media (min-width: 768px) {
+  .proyectos {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
